--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,9 @@
     "48": "icon.png"
   },
 
-  "applications": {
-    "gecko": {
-      "id": "harsh35plus@gmail.com",
-      "strict_min_version": "45.0"
-    }
-  },
+
  "permissions": [
-    "activeTab"
+    "tabs"
 ],
   "background": {
     "scripts": ["background.js"]
