--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
   "description": "Adds a button to open current page with Google Web Light",
   "manifest_version": 2,
   "name": "Lighter",
-  "version": "1.0",
+  "version": "1.1",
   "homepage_url": "https://github.com/harshit-j/Lighter",
   "icons": {
-    "48": "icon.png"
+    "256": "icon256.png"
   },
 
 
@@ -18,7 +18,7 @@
   },
 
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon256.png"
   },
   
   "commands": {
